engine/tests/detection_corpus/bad/secret_openai.py
import openai
openai.api_key = "sk-proj-Ab3dEf6hIj9kLm2nOp5qRs8tUv"
